syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.betPawa.wallet.proto";
option java_outer_classname = "WalletClass";
option objc_class_prefix = "WC";

service WalletService {
  rpc deposit (BaseRequest) returns (BaseResponse) {
  }
  rpc withdraw (BaseRequest) returns (BaseResponse) {
  }
  rpc balance (BaseRequest) returns (BaseResponse) {
  }
}

enum Status {
  TRANSACTION_SUCCESS = 0;
  TRANSACTION_FAILED = 1;
}

enum Operation {
  DEPOSIT = 0;
  WITHDRAW = 1;
  BALANCE = 2;
}

enum Currency {
  USD = 0;
  EUR = 1;
  GBP = 2;
}

enum StatusMessage {
  USER_DOES_NOT_EXIST = 0;
  INVALID_ARGUMENTS = 1;
  INSUFFICIENT_BALANCE = 2;
  AMOUNT_SHOULD_BE_GREATER_THAN_ZERO = 3;
  INVALID_CURRENCY = 4;
}

message BaseResponse {
  Status status = 1;
  string statusMessage = 2;
  Operation operation = 3;
}

message BaseRequest {
  int64 userID = 1;
  string amount = 2;
  Currency currency = 3;
}

